add button animation

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -56,6 +56,32 @@
 	cursor: pointer;
 	margin: 2rem 0;
 	font-weight: bold;
+	animation: wiggle 2s linear infinite;
+}
+@keyframes wiggle {
+	0%,
+	7% {
+		transform: rotateZ(0);
+	}
+	15% {
+		transform: rotateZ(-15deg);
+	}
+	20% {
+		transform: rotateZ(10deg);
+	}
+	25% {
+		transform: rotateZ(-10deg);
+	}
+	30% {
+		transform: rotateZ(6deg);
+	}
+	35% {
+		transform: rotateZ(-4deg);
+	}
+	40%,
+	100% {
+		transform: rotateZ(0);
+	}
 }
 
 .button:hover,
