--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -56,6 +56,7 @@
 	cursor: pointer;
 	margin: 2rem 0;
 	font-weight: bold;
+	transition: all 1s ease;
 	animation: wiggle 2s linear infinite;
 }
 @keyframes wiggle {
@@ -86,7 +87,6 @@
 
 .button:hover,
 .secondaryButton:hover {
-	transition: all 1ms ease;
 	scale: 1.1;
 }
 
@@ -99,6 +99,7 @@
 	cursor: pointer;
 	margin: 2rem 0;
 	font-weight: bold;
+	transition: all 1s ease;
 }
 
 /* Mobile */
