--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -31,6 +31,22 @@
 	flex: 1;
 }
 
+.image {
+	animation: floatimg 6s linear infinite;
+}
+
+@keyframes floatimg {
+	0% {
+		transform: translateY(0px) scale(1);
+	}
+	50% {
+		transform: translateY(20px) scale(0.9);
+	}
+	100% {
+		transform: translateY(0px) scale(1);
+	}
+}
+
 .h1 {
 	font-size: 3rem;
 	margin: 2rem 0;
