--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -28,7 +28,6 @@
 .flexRight {
 	position: relative;
 	z-index: 10;
-	flex: 1;
 }
 
 .image {
@@ -123,6 +122,8 @@
 	.main {
 		justify-content: flex-start;
 		padding: 0 5%;
+		height: 100vh;
+		min-height: 50rem;
 	}
 	.logo {
 		margin: 1rem 0;
