--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -100,6 +100,10 @@
 	}
 }
 
+.icon {
+	width: 1rem;
+}
+
 .button:hover,
 .secondaryButton:hover {
 	scale: 1.1;
@@ -115,6 +119,9 @@
 	margin: 2rem 0;
 	font-weight: bold;
 	transition: all 1s ease;
+	display: flex;
+	justify-content: center;
+	gap: 0.3rem;
 }
 
 /* Mobile */
